--- a/style.css
+++ b/style.css
@@ -35,6 +35,9 @@
 .blue{
     color: #1E0E62;
 }
+.white{
+    color: #ffffff;
+}
 /* .header_1 start */
 /* -----------------------navigation start  */
 .header_1 nav {
@@ -435,14 +438,112 @@
     align-items: center;
 }
 .header_5 .header5-footer{
-    justify-content: space-around;
-    text-align: center;
-    margin-top: 30px;
+    justify-content: space-between;
+ margin: 30PX auto;
     padding-bottom: 30px;
+    width: 70%;
 }
 
 .header_5 .header5-footer p{
     width: 25%;
     line-height: 2rem;
-    padding-right: 10px;
+    padding:0px 25px;
+   text-align: center;
+
 }
+#left-rightborder{
+    border-left:2px solid #cac9cc;
+    border-right:2px solid #cac9cc;
+}
+
+/* .header_5 end */
+
+/* .header_6 start */
+.header_6{
+    /* background-color: #25DAC5; */
+    background: url("img/header_6\ img.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.header_6 nav{
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 50px;
+}
+.header_6 .left
+{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.header_6 .left *{
+    padding: 0px 15px;
+}
+.header_6 ul *{
+    padding: 0px 10px;
+}
+.header_6 ul{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+}
+.header_6 ul li button{
+    border: none;
+    outline: none;
+    color: #ffffff;
+    padding: 8px 15px;
+    border-radius: 15px;
+    background-color: #25DAC5;
+
+}
+.header_6 main{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    flex-direction: column;
+}
+.header_6 main h1{
+    text-align: center;
+    margin-top: 30px;
+    width: 784px;
+    height: 144px;
+    font-size: 48px;
+}
+.header_6 main .playicon{
+    margin: 50px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+    height: 60px;
+    background-color: red;
+    border-radius: 50%;
+}
+.playicon i{
+    color: #ffffff;
+    font-size: 1.5rem;
+}
+.header_6 main button{
+    width: 120px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: #25DAC5;
+    color: #ffffff;
+    border: none;
+    outline: none;
+    margin-bottom: 30px;
+}
+.header_6 main p:last-child{
+    width: 413px;
+    height: 73px;
+    text-align: center;
+    line-height: 1.8rem;
+}
+
+/* header_6  end */
+
+
+
+/* header_7  end */
