--- a/style.css
+++ b/style.css
@@ -546,4 +546,171 @@
 
 
 
-/* header_7  end */
+/* header_7  start */
+.header_7{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    padding-top: 50px;
+}
+.header_7 .left-side{
+    padding: 60px 115px;
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+}
+.header_7 .left-side nav{
+    /* border: 1px solid; */
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+}
+.header_7 .left-side nav ul{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+    width: 25%;
+    
+}
+.header_7 main{
+    margin-top: 70px;
+}
+.header_7 main .header7-desc{
+    margin: 10px 0;
+    width: 71%;
+    line-height: 1.5rem;
+}
+.header_7 .side-img{
+    width: 45%;
+    background: url("/img/header_7\ img.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.header_7 .btngroup{
+    width: 38%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+.header_7 .btngroup .btn-blue{
+    background-color: rgba(37, 218, 197, 1);
+    height: 40px;
+    padding:4px 18px;
+    border-radius: 20px;
+    color: #ffffff;
+    border:none;
+    outline: none;
+}
+.header_7 .btngroup .btn-white{
+    background-color:#ffffff;
+    height: 40px;
+    padding:4px 18px;
+    border-radius: 20px;
+    color:#1E0E62;
+    border: 1px solid #cac9cc;
+    
+}
+.header_7 main p:last-child{
+    font-size: small;
+    margin-top: 10px;
+}
+
+/* header7 end */
+
+/* header8 start */
+.header_8{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    /* justify-content: center; */
+    flex-direction: column;
+    align-items: center;
+    background: url("img/header_8\ img.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: brightness(1);
+}
+.header_8::before {
+    content: "";
+    background-color: rgba(120, 104, 199, 0.2);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+  }
+.header_8 nav{
+    margin-top: 50px;
+}
+.header_8 nav ul{
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+    width: 500px;
+}
+.header_8 main{
+    display: flex;
+    width: 100%;
+    margin: 70px 0;
+    justify-content: center;
+    align-items: center;
+}
+.header_8 .left-angle{
+    font-weight: bolder;
+    color: rgb(179, 169, 169);
+}
+.header_8 .right-angle{
+    font-weight: bolder;
+    color: rgb(243, 237, 237);
+}
+.header8_desc{
+    color: #ffffff;
+    display: flex;
+    width:650px;
+    height: 250px;
+    padding: 0px 115px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
+}
+.header8_desc .para{
+    margin-top: 20px;
+    width: 75%;
+    line-height: 1.5rem;
+    text-align: center;
+
+}
+.header8_desc ul{
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-around;
+    width: 15%;
+    list-style: none;
+
+}
+.header8_desc ul *{
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    border: 0.5px solid rgb(204, 194, 194);
+}
+.header8_btn button{
+    width: 180px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: #482BE7;
+    color: #ffffff;
+    border: none;
+    outline: none;
+
+}
+
+.header8_desc ul li:first-child{
+    background-color: #ffffff;
+}
+
+/* .header_8  end  */
