--- a/style.css
+++ b/style.css
@@ -723,7 +723,7 @@
 
 }
 .header_9 nav{
-    padding: 0 115px;
+    padding: 0 215px;
     display: flex;
  
     justify-content: space-between;
@@ -746,7 +746,7 @@
     font-weight: bold;
 }
 .header_9 main{
-    padding: 70px 115px;
+    padding: 70px 215px;
     display: flex;
     justify-content: space-between;
 
@@ -795,12 +795,12 @@
     display: flex;
     justify-content: space-between;
     color: #ffffff;
-    padding: 0 115px;
+    padding: 0 215px;
     padding-top: 50px;
 }
 .header_10 .leftnav{
     display: flex;
-    width: 40%;
+    width: 50%;
     align-items: center;
     justify-content: start;
 }
@@ -884,10 +884,101 @@ align-items: center;
     width: 40%;
 }
 
-
-
-
-
-
-
 /* .header_10  end  */
+
+
+
+/* .header_11  start  */
+.header_11{
+    width: 100vw;
+    height: 100vh;
+
+}
+.header_11 nav{
+    display: flex;
+    justify-content: space-between;
+    color: #2F1893;
+    padding: 0 215px;
+    padding-top: 50px;
+}
+
+.header_11 nav ul{
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    width: 38%;
+    font-weight: bold;
+    align-items: center;
+}
+.header_11 nav ul li:last-child{
+    padding:5px 18px;
+    border-radius: 20px;
+    font-weight: bold;
+    background-color: #482BE7;
+    color: #fff;
+}
+
+.header_11 main{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 215px;
+    margin-top: 30px;
+}
+
+.header_11 .leftmain h1{
+    width: 200px;
+    line-height: 3rem;
+
+}
+.header_11 .leftmain p{
+    width: 220px;
+    margin-top: 20px;
+    margin-bottom: 50px;
+
+}
+
+.header11_btngrp button:first-child{
+    width: 100px;
+    height: 40px;
+    border-radius: 20px;
+    background-color: #25DAC5;
+    color: #fff;
+    border: none;
+    outline: none;
+    margin-right: 20px;
+
+}
+.header11_btngrp button:last-child{
+    width: 100px;
+    height: 40px;
+    border-radius: 20px;
+    color: #361bac;
+    background-color: #fff;
+    border: 1px solid #cac9cc;
+    outline: none;
+    margin-right: 20px;
+
+}
+
+.header_11 .rightmain{
+    width: 50%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+
+}
+.header_11 .rightmain img{
+    width: 65%;
+    height: 400px;
+    border-radius: 20px;
+}
+
+
+
+
+
+
+
+/* .header_11  end  */
+
+
