--- a/style.css
+++ b/style.css
@@ -972,13 +972,68 @@ align-items: center;
     height: 400px;
     border-radius: 20px;
 }
-
-
-
-
-
-
-
 /* .header_11  end  */
+
+
+/* .header_12  end  */
+.header_12{
+    width: 100vw;
+    height: 100vh;
+   background-color: #2F1893;
+}
+.header_12 main{
+    padding: 80px 215px;
+    display: flex;
+    justify-content: space-between;
+    color: #ffffff;
+}
+.header_12 main div:first-child{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+.header_12 main div h1{
+    width: 60%;
+    margin: 20px 0;
+    font-size: 40px;
+}
+.header_12 main div p{
+    width: 50%;
+    margin-bottom: 20px;
+}
+.header_12 main div button{
+    width: 180px;
+    height: 40px;
+    border-radius: 25px;
+    background-color: #25DAC5;
+    color: #fff;
+    outline: none;
+    border: none;
+}
+.header_12 main .imggrp{
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+    width: 50%; 
+    padding-right: 80px;
+}
+.imggrp img:first-child{
+    width: 250px;
+    height: 450px;
+    border-radius: 30px;
+    position: relative;
+    left: 120px;
+
+
+}
+.imggrp img:last-child{
+    width: 200px;
+    height: 400px;
+    border-radius: 30px;
+    /* z-index: -; */
+}
+
+
+/* .header_12  end  */
 
 
