--- a/style.css
+++ b/style.css
@@ -1030,10 +1030,66 @@ align-items: center;
     width: 200px;
     height: 400px;
     border-radius: 30px;
-    /* z-index: -; */
 }
-
-
 /* .header_12  end  */
+
+/* .header_13  start  */
+    .header_13 {
+        width: 100vw;
+        height: 100vh;
+        background:url("/img/header_13\ img.png");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        color: #fff;
+    }
+    .header_13 nav{
+        display: flex;
+        justify-content: space-between;
+        padding: 0 215px;
+        padding-top: 50px;
+        align-items: center;
+    }
+    
+    .header_13 nav ul{
+        display: flex;
+        justify-content: space-between;
+        list-style: none;
+        width: 38%;
+        /* font-weight: bold; */
+    }
+    .header_13 nav button{
+        /* width: 100px; */
+        border-radius: 15px;
+        background-color: #482BE7;
+        padding: 6px 18px;
+        color: #fff;
+        border: none;
+        outline: none;
+    }
+
+    .header_13 main{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-top: 90px;
+    }
+    .header_13 main h1{
+        width: 350px;
+        height: 100px;
+        font-size: 40px;
+        line-height: 4rem;
+        text-align: center;
+        margin-top: 50px;
+    }
+    .header_13 main p{
+        width: 330px;
+        height: 100px;
+        text-align: center;
+        margin-top: 50px;
+    }
+
+/* .header_13  end  */
 
 
